Add transaction coordinator. Allow idle transactions to be aborted when their parent JS context finishes executing.

This change depends on the following WebKit bug:

https://bugs.webkit.org/show_bug.cgi?id=44101

Review URL: http://codereview.chromium.org/3165026

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@56862 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 1f79401611f73ac332233ce35ef1c29b7c7af0c2